# File_Finder

./: CMakeLists.txt  README.md  fileconstants.h  fileoperations.cpp  fileoperations.h  main.cpp
Logger/: CMakeLists.txt  logger.cpp  logger.h
